--- a/themes/hugo-agency-theme/static/css/agency.css
+++ b/themes/hugo-agency-theme/static/css/agency.css
@@ -14,7 +14,7 @@ body {
 }
 
 .text-primary {
-    color: #3c8c48;
+    color: #95af53;
 }
 
 p {
@@ -35,7 +35,7 @@ a.active {
 }
 
 a {
-    color: #3c8c48;
+    color: #95af53;
 }
 
 a:hover,
@@ -69,12 +69,12 @@ h6 {
 }
 
 .btn-primary {
-    border-color: #3c8c48;
+    border-color: #95af53;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     color: #fff;
-    background-color: #3c8c48;
+    background-color: #95af53;
 }
 
 .btn-primary:hover,
@@ -108,25 +108,25 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #3c8c48;
-    background-color: #3c8c48;
+    border-color: #95af53;
+    background-color: #95af53;
 }
 
 .btn-primary .badge {
-    color: #3c8c48;
+    color: #95af53;
     background-color: #fff;
 }
 
 .btn-xl {
     padding: 20px 40px;
-    border-color: #3c8c48;
+    border-color: #95af53;
     border-radius: 3px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 18px;
     font-weight: 700;
     color: #fff;
-    background-color: #3c8c48;
+    background-color: #95af53;
 }
 
 .btn-xl:hover,
@@ -160,12 +160,12 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-    border-color: #3c8c48;
-    background-color: #3c8c48;
+    border-color: #95af53;
+    background-color: #95af53;
 }
 
 .btn-xl .badge {
-    color: #3c8c48;
+    color: #95af53;
     background-color: #fff;
 }
 
@@ -193,7 +193,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-toggle {
     border-color: #1a6a26;
-    background-color: #3c8c48;
+    background-color: #95af53;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -202,7 +202,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: #3c8c48;
+    background-color: #95af53;
 }
 
 .navbar-default .nav li a {
@@ -224,7 +224,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .navbar-nav>.active>a {
     border-radius: 0;
     color: #fff;
-    background-color: #3c8c48;
+    background-color: #95af53;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
@@ -501,7 +501,7 @@ section h3.section-subheading {
     border-radius: 100%;
     text-align: center;
     color: #fff;
-    background-color: #3c8c48;
+    background-color: #95af53;
 }
 
 .timeline>li .timeline-image h4 {
@@ -688,7 +688,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-    border-color: #3c8c48;
+    border-color: #95af53;
     box-shadow: none;
 }
 
@@ -766,7 +766,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-    background-color: #3c8c48;
+    background-color: #95af53;
 }
 
 .btn:focus,
@@ -854,12 +854,12 @@ ul.social-buttons li a:active {
 
 ::-moz-selection {
     text-shadow: none;
-    background: #3c8c48;
+    background: #95af53;
 }
 
 ::selection {
     text-shadow: none;
-    background: #3c8c48;
+    background: #95af53;
 }
 
 img::selection {
@@ -871,5 +871,5 @@ img::-moz-selection {
 }
 
 body {
-    webkit-tap-highlight-color: #3c8c48;
+    webkit-tap-highlight-color: #95af53;
 }
