--- a/themes/hugo-agency-theme/static/css/agency.css
+++ b/themes/hugo-agency-theme/static/css/agency.css
@@ -119,14 +119,14 @@ fieldset[disabled] .btn-primary.active {
 
 .btn-xl {
     padding: 20px 40px;
-    border-color: #95af53;
+    border-color: #5A4032;
     border-radius: 3px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 18px;
     font-weight: 700;
     color: #fff;
-    background-color: #95af53;
+    background-color: #866857;
 }
 
 .btn-xl:hover,
@@ -134,9 +134,9 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl:active,
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
-    border-color: #1a6a26;
+    border-color: #5A4032;
     color: #fff;
-    background-color: #1a6a26;
+    background-color: #5A4032;
 }
 
 .btn-xl:active,
@@ -176,7 +176,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-brand {
     font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
-    color: #eded13;
+    color: #866857;
     text-shadow: 1px 1px 2px black;
 }
 
@@ -184,7 +184,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-    color: #1a6a26;
+    color: #5A4032;
 }
 
 .navbar-default .navbar-collapse {
@@ -218,7 +218,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
     outline: 0;
-    color: #eded13;
+    color: #546c15;
 }
 
 .navbar-default .navbar-nav>.active>a {
@@ -230,7 +230,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
     color: #fff;
-    background-color: #1a6a26;
+    background-color: #779132;
 }
 
 @media(min-width:768px) {
