Point to sales@ email

--- a/themes/hugo-agency-theme/layouts/partials/js.html
+++ b/themes/hugo-agency-theme/layouts/partials/js.html
@@ -20,7 +20,7 @@
 <!-- Obfuscate the email address to hopefully fool the spam bots -->
 <script>
     var contactform =  document.getElementById('contactForm');
-    contactform.setAttribute('action', '//formspree.io/' + 'dominic' + '@' + 'dillodirt' + '.' + 'com');
+    contactform.setAttribute('action', '//formspree.io/' + 'sales' + '@' + 'dillodirt' + '.' + 'com');
 		
 		$(document).ready(function() {
 		    var $sub = $("#subjectInput");
